function (add_and_register_ll_test target)
    add_and_register_test(${target})
    target_link_libraries(${target} PRIVATE bluetoe::link_layer)
endfunction()

add_and_register_ll_test(ll_advertising_tests)
add_and_register_ll_test(address_tests)
add_and_register_ll_test(channel_map_tests)
add_and_register_ll_test(delta_time_tests)
add_and_register_ll_test(ll_data_pdu_buffer_tests)
add_and_register_ll_test(ll_connection_tests)
add_and_register_ll_test(ll_connecting_tests)
add_and_register_ll_test(ll_control_tests)
add_and_register_ll_test(ll_data_tests)
add_and_register_ll_test(ring_buffer_tests)
add_and_register_ll_test(connection_callbacks_tests)
add_and_register_ll_test(signaling_channel_tests)
add_and_register_ll_test(white_list_tests)
add_and_register_ll_test(connection_parameter_update_procedure_tests)
add_and_register_ll_test(test_radio_tests)
add_and_register_ll_test(advertiser_tests)
add_and_register_ll_test(ll_encryption_tests)
add_and_register_ll_test(ll_l2cap_sdu_buffer_tests)
add_and_register_ll_test(peripheral_latency_tests)
add_and_register_ll_test(ll_peripheral_latency_tests)
add_and_register_ll_test(ll_phy_update_tests)
