function (add_and_register_sm_test target)
    add_and_register_test(${target})
    target_link_libraries(${target} PRIVATE bluetoe::link_layer )
endfunction()

add_and_register_sm_test(pairing_tests aes.c)
add_and_register_sm_test(pairing_request_tests aes.c)
add_and_register_sm_test(pairing_confirm_tests aes.c)
add_and_register_sm_test(test_sm_tests aes.c)
add_and_register_sm_test(pairing_random_tests aes.c)
add_and_register_sm_test(key_distribution_tests aes.c)
add_and_register_sm_test(encryption_example_tests aes.c)
